--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,213 +9,300 @@
     </div>
     <!-- <div class="col-1"></div> -->
 
-    <form [formGroup]="registerForm" >
-    <div class="regstro" id="firstForm" *ngIf="firstFormActive">
-      <div class="row justify-content-center" id="registro">
-        <div class="col-5 inputsRegister">
-          <label for="inputName"></label>
-          <input
-          [ngModelOptions]="{standalone: true}"
-            [(ngModel)]="userName"
-            type="text"
-            class="form-control"
-            id="name"
-            aria-describedby="name"
-            placeholder="Nombre"
-          />
-          <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
- -->
-        </div>
+    <form [formGroup]="registerForm">
+      <div class="form form-group" *ngIf="firstFormActive">
+        <div class="col-12 rounded-3 bg-registro">
+          <div class="row justify-content-center" id="registro">
+            <div class="col-5 inputsRegister" (click)="validation()">
+              <label for="inputName"></label>
+              <input
+                id="name"
+                type="text"
+                class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.userName.errors }"
+                formControlName="userName"
+                placeholder="Nombre"
+                style="border-left: 4px solid"
+                [ngStyle]="{
+                  'border-left-color':
+                    submitted == true && !f.userName.errors == true
+                      ? '#44df07'
+                      : 'red'
+                }"
+              />
 
-        <div class="row justify-content-center">
-          <div class="col-5 inputsRegister">
-            <label for="inpuLastName"></label>
-            <input
-            [ngModelOptions]="{standalone: true}"
-              [(ngModel)]="lastUserName"
-              type="text"
-              class="form-control"
-              id="lastName"
-              aria-describedby="name"
-              placeholder="Apellido"
-            />
-          </div>
-        </div>
-        <div class="row justify-content-center pb-4">
-          <div class="col-5 inputsRegister">
-            <label for="inputNick"></label>
-            <input
-            [ngModelOptions]="{standalone: true}"
-              type="text"
-              [(ngModel)]="nick"
-              class="form-control"
-              id="nick"
-              aria-describedby="name"
-              placeholder="Apodo"
-            />
-          </div>
-        </div>
-        <div class="row justify-content-center pb-4">
-          <div class="col-5 inputsRegister" style="text-align: center">
-            <label for="inputNick"></label>
-            <button
-              (click)="nextOne()"
-              type="submit"
-              class="btn btn-primary bi bi-arrow-bar-right"
-              id="nextFirstForm"
-              aria-describedby="submit"
-            ></button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="form form-group " *ngIf="secondFormActive">
-      <div class="col-12 rounded-3 bg-registro " >
-        <div class="row justify-content-center" id="registro">
-          <div class="col-5 inputsRegister" (click)="secondValidation()" >
-            <label for="inputMail"></label>
-            <input
-            
-              type="email"
-              class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
-              formControlName="email" 
-           
-              
-              placeholder="Correo"
-
-              style="border-left: 4px solid;" [ngStyle]="{'border-left-color':submitted==true && !f.email.errors==true ? '#44df07' : 'red' }"
-            />
-            
-            <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
--->     <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-  <div *ngIf="f.email.errors.required">El correo es obligatorio</div>
-  <div *ngIf="f.email.errors.email">Correo invalido</div>
-</div>
-
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-5 inputsRegister" (click)="secondValidation()">
-            <label for="inpuPassword"></label>
-            <input
-            
-            [(ngModel)]="password"
-              type="password"
-              class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
-              id="password"
-              formControlName="password" 
-              placeholder="Contraseña"
-              style="border-left: 4px solid;" [ngStyle]="{'border-left-color':submitted==true && !f.password.errors==true ? '#44df07' : 'red' }"
-            />
-            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-              <div *ngIf="f.password.errors.required">Contraseña obligatoria</div>
-              <div *ngIf="f.password.errors.minlength">Debe tener 8 caracteres como minimo</div>
-          </div>
-    
-          </div>
-        </div>
-        <div class="row justify-content-center pb-4">
-          <div class="col-5 inputsRegister"  (click)="secondValidation()">
-            <label for="inputPassword2"></label>
-            <input
-              [(ngModel)]="password2"
-              type="password"
-              class="form-control"
-              id="password2"
-              aria-describedby="name"
-              formControlName="password" 
-              placeholder="Repite la contraseña"
-              style="border-left: 4px solid;" [ngStyle]="{'border-left-color':submitted==true && !f.password2.errors==true ? '#44df07' : 'red' }"
-            />
-            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-              <div *ngIf="f.password.errors.required">Contraseña obligatoria</div>
-              <div *ngIf="f.password.errors.minlength">No coinciden las contraseñas</div>
-          </div>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-5 nextBackButtons">
-            <label for="inputNick"></label>
-            <button
-              (click)="backSecond()"
-              type="submit"
-              class="btn btn-primary bi bi-arrow-bar-left"
-              id="name"
-              aria-describedby="name"
-            ></button>
-          </div>
-
-          <div class="col-5 nextBackButtons">
-            <label for="inputNick"></label>
-            <button
-              (click)="nextSecond()"
-              type="submit"
-              class="btn btn-primary bi bi-arrow-bar-right"
-              id="name"
-              aria-describedby="name"
-            ></button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="form" *ngIf="thirdFormActive">
-      <div class="col-12 rounded-3 bg-registro">
-        <div class="row justify-content-center" id="registro3">
-          <div class="col-5 inputsRegister">
-            <label for="inputName"></label>
-            <input
-            [(ngModel)]="birthDate"
-              type="date"
-              class="form-control"
-              id="birthDate"
-              aria-describedby="name"
-              placeholder="Fecha de nacimiento"
-            />
-            <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+              <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
 -->
+              <div
+                *ngIf="submitted && f.userName.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="f.userName.errors.required">
+                  El nombre es obligatorio
+                </div>
+                <div *ngIf="f.userName.errors.minlength">Nombre invalido</div>
+              </div>
+            </div>
           </div>
-        </div>
 
-        <div class="row justify-content-center">
-          <div class="col-5">
-            <label for="inpuLastName"></label>
-            <textarea
-            [(ngModel)]="description"
-              name=""
-              id="description"
-              class="form-control"
-              rows="4"
-            ></textarea>
+          <div class="row justify-content-center" id="registro">
+            <div class="col-5 inputsRegister" (click)="validation()">
+              <label for="inputName"></label>
+              <input
+                id="lastName"
+                type="text"
+                class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.lastUserName.errors }"
+                formControlName="lastUserName"
+                placeholder="Apellido"
+                style="border-left: 4px solid"
+                [ngStyle]="{
+                  'border-left-color':
+                    submitted == true && !f.lastUserName.errors == true
+                      ? '#44df07'
+                      : 'red'
+                }"
+              />
+
+              <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+-->
+              <div
+                *ngIf="submitted && f.lastUserName.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="f.lastUserName.errors.required">
+                  El apellido es obligatorio
+                </div>
+                <div *ngIf="f.lastUserName.errors.minlength">
+                  Apellido invalido
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="row justify-content-center pb-4"></div>
-        <div class="row justify-content-center pb-4">
-          <div class="col-5 nextBackButtons">
-            <label for="inputDescription"></label>
-            <button
-              (click)="backThird()"
-              type="submit"
-              class="btn btn-primary bi bi-arrow-bar-left"
-              id="name"
-              aria-describedby="name"
-            ></button>
+
+          <div class="row justify-content-center" id="registro">
+            <div class="col-5 inputsRegister" (click)="validation()">
+              <label for="inputName"></label>
+              <input
+                id="nick"
+                type="text"
+                class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.userNick.errors }"
+                formControlName="userNick"
+                placeholder="Apodo"
+                style="border-left: 4px solid"
+                [ngStyle]="{
+                  'border-left-color':
+                    submitted == true && !f.userNick.errors == true
+                      ? '#44df07'
+                      : 'red'
+                }"
+              />
+
+              <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+-->
+              <div
+                *ngIf="submitted && f.userNick.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="f.userNick.errors.required">
+                  El Apodo es obligatorio
+                </div>
+                <div *ngIf="f.userNick.errors.minlength">Apodo invalido</div>
+              </div>
+            </div>
           </div>
-          <div class="col-5 nextBackButtons">
-            <label for="inputDescription"></label>
-            <button
-              type="submit"
-              class="btn btn-primary bi bi-send-check"
-              id="name"
-              aria-describedby="name"
-            ></button>
+
+          <div class="row justify-content-center pt-4 pb-4">
+            <div class="col-5 inputsRegister" style="text-align: center">
+              <label for="inputNick"></label>
+              <button
+                [disabled]="!valid.isDisabled"
+                (click)="nextOne()"
+                type="submit"
+                class="btn btn-primary bi bi-arrow-bar-right"
+                id="nextFirstForm"
+                aria-describedby="submit"
+              ></button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </form>
+
+      <div class="form form-group" *ngIf="secondFormActive">
+        <div class="col-12 rounded-3 bg-registro">
+          <div class="row justify-content-center" id="registro">
+            <div class="col-5 inputsRegister" (click)="validation()">
+              <label for="inputMail"></label>
+              <input
+                type="email"
+                class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
+                formControlName="email"
+                placeholder="Correo"
+                style="border-left: 4px solid"
+                [ngStyle]="{
+                  'border-left-color':
+                    submitted == true && !f.email.errors == true
+                      ? '#44df07'
+                      : 'red'
+                }"
+              />
+
+              <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+-->
+              <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                <div *ngIf="f.email.errors.required">
+                  El correo es obligatorio
+                </div>
+                <div *ngIf="f.email.errors.minlength">Correo invalido</div>
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-5 inputsRegister" (click)="validation()">
+              <label for="inpuPassword"></label>
+              <input
+                [(ngModel)]="password"
+                type="password"
+                class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+                id="password"
+                formControlName="password"
+                placeholder="Contraseña"
+                style="border-left: 4px solid"
+                [ngStyle]="{
+                  'border-left-color':
+                    submitted == true && !f.password.errors == true
+                      ? '#44df07'
+                      : 'red'
+                }"
+              />
+              <div
+                *ngIf="submitted && f.password.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="f.password.errors.required">
+                  Contraseña obligatoria
+                </div>
+                <div *ngIf="f.password.errors.minlength">
+                  Debe tener 8 caracteres como minimo
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-center pb-4">
+            <div class="col-5 inputsRegister" (click)="validation()">
+              <label for="inputPassword2"></label>
+              <input
+                [(ngModel)]="password2"
+                type="password"
+                class="form-control"
+                id="password2"
+                aria-describedby="name"
+                formControlName="password"
+                placeholder="Repite la contraseña"
+                style="border-left: 4px solid"
+                [ngStyle]="{
+                  'border-left-color':
+                    submitted == true && !f.password2.errors == true
+                      ? '#44df07'
+                      : 'red'
+                }"
+              />
+              <div
+                *ngIf="submitted && f.password.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="f.password.errors.required">
+                  Contraseña obligatoria
+                </div>
+                <div *ngIf="f.password.errors.minlength">
+                  No coinciden las contraseñas
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-5 nextBackButtons">
+              <label for="inputNick"></label>
+              <button
+                (click)="backSecond()"
+                type="submit"
+                class="btn btn-primary bi bi-arrow-bar-left"
+                id="name"
+                aria-describedby="name"
+              ></button>
+            </div>
+
+            <div class="col-5 nextBackButtons">
+              <label for="inputNick"></label>
+              <button
+                (click)="nextSecond()"
+                type="submit"
+                class="btn btn-primary bi bi-arrow-bar-right"
+                id="name"
+                aria-describedby="name"
+              ></button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form" *ngIf="thirdFormActive">
+        <div class="col-12 rounded-3 bg-registro">
+          <div class="row justify-content-center" id="registro3">
+            <div class="col-5 inputsRegister">
+              <label for="inputName"></label>
+              <input
+                [(ngModel)]="birthDate"
+                type="date"
+                class="form-control"
+                id="birthDate"
+                aria-describedby="name"
+                placeholder="Fecha de nacimiento"
+              />
+              <!--                                 <h1 class="next  bi bi-arrow-bar-right fa-9x" id="next" onclick="next()"> </h1> 
+-->
+            </div>
+          </div>
+
+          <div class="row justify-content-center">
+            <div class="col-5">
+              <label for="inpuLastName"></label>
+              <textarea
+                [(ngModel)]="description"
+                name=""
+                id="description"
+                class="form-control"
+                rows="4"
+              ></textarea>
+            </div>
+          </div>
+          <div class="row justify-content-center pb-4"></div>
+          <div class="row justify-content-center pb-4">
+            <div class="col-5 nextBackButtons">
+              <label for="inputDescription"></label>
+              <button
+                (click)="backThird()"
+                type="submit"
+                class="btn btn-primary bi bi-arrow-bar-left"
+                id="name"
+                aria-describedby="name"
+              ></button>
+            </div>
+            <div class="col-5 nextBackButtons">
+              <label for="inputDescription"></label>
+              <button
+                type="submit"
+                class="btn btn-primary bi bi-send-check"
+                id="name"
+                aria-describedby="name"
+              ></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
-  
 </div>
