--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -16,6 +16,7 @@
             <div class="col-5 inputsRegister" (click)="validation()">
               <label for="inputName"></label>
               <input
+              [(ngModel)]="userName" 
                 id="name"
                 type="text"
                 class="form-control"
@@ -49,6 +50,7 @@
             <div class="col-5 inputsRegister" (click)="validation()">
               <label for="inputName"></label>
               <input
+              [(ngModel)]="lastUserName" 
                 id="lastName"
                 type="text"
                 class="form-control"
@@ -84,7 +86,8 @@
             <div class="col-5 inputsRegister" (click)="validation()">
               <label for="inputName"></label>
               <input
-                id="nick"
+              [(ngModel)]="nick" 
+              id="nick"
                 type="text"
                 class="form-control"
                 [ngClass]="{ 'is-invalid': submitted && f.userNick.errors }"
@@ -93,7 +96,7 @@
                 style="border-left: 4px solid"
                 [ngStyle]="{
                   'border-left-color':
-                    submitted == true && !f.userNick.errors == true
+                  submitted == true && !f.userNick.errors == true
                       ? '#44df07'
                       : 'red'
                 }"
@@ -117,8 +120,8 @@
             <div class="col-5 inputsRegister" style="text-align: center">
               <label for="inputNick"></label>
               <button
-                [disabled]="!valid.isDisabled"
-                (click)="nextOne()"
+             
+                (click)=" nextOne()"
                 type="submit"
                 class="btn btn-primary bi bi-arrow-bar-right"
                 id="nextFirstForm"
@@ -164,7 +167,7 @@
               <label for="inpuPassword"></label>
               <input
                 [(ngModel)]="password"
-                type="password"
+                type="text"
                 class="form-control"
                 [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
                 id="password"
@@ -183,7 +186,7 @@
                 class="invalid-feedback"
               >
                 <div *ngIf="f.password.errors.required">
-                  Contraseña obligatoria
+                 La contraseña es obligatoria
                 </div>
                 <div *ngIf="f.password.errors.minlength">
                   Debe tener 8 caracteres como minimo
@@ -196,31 +199,24 @@
               <label for="inputPassword2"></label>
               <input
                 [(ngModel)]="password2"
-                type="password"
+                type="text"
                 class="form-control"
                 id="password2"
                 aria-describedby="name"
-                formControlName="password"
+                formControlName="password2"
                 placeholder="Repite la contraseña"
                 style="border-left: 4px solid"
                 [ngStyle]="{
                   'border-left-color':
-                    submitted == true && !f.password2.errors == true
+                   samePass == false
                       ? '#44df07'
                       : 'red'
                 }"
               />
-              <div
-                *ngIf="submitted && f.password.errors"
-                class="invalid-feedback"
-              >
-                <div *ngIf="f.password.errors.required">
-                  Contraseña obligatoria
-                </div>
-                <div *ngIf="f.password.errors.minlength">
-                  No coinciden las contraseñas
-                </div>
-              </div>
+           
+              <div *ngIf="f.password2.touched && f.password2.invalid" class="alert alert-danger">
+                <div *ngIf="f.password2.errors.required">Password is required.</div>
+                <div *ngIf="f.password2.errors.confirmedValidator">Password and Confirm Password must be match.</div>
             </div>
           </div>
           <div class="row justify-content-center">
