--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -222,7 +222,7 @@
                 <!--                 <div *ngIf="f.password2.errors.required">Password is required.</div>
  -->
                 <div *ngIf="f.password2.errors.confirmedValidator">
-                  Password and Confirm Password must be match.
+                  Las contraseñas deben coincidir.
                 </div>
               </div>
             </div>
